src/style.css
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
@import "tailwindcss";

@theme {
	--color-base: #1e1e2e;
	--color-mantle: #181825;
	--color-crust: #11111b;

	--color-surface-0: #313244;
	--color-surface-1: #45475a;
	--color-surface-2: #585b70;

	--color-overlay-0: #6c7086;
	--color-overlay-1: #7f849c;
	--color-overlay-2: #9399b2;

	--color-subtext-0: #a6adc8;
	--color-subtext-1: #bac2de;

	--color-text: #cdd6f4;

	--color-red: #f38ba8;
	--color-yellow: #f9e2af;
	--color-green: #a6e3a1;
	--color-blue: #89b4fa;

	--color-vhp: #e2f1e7;
}

:root {
	font-family: Rubik, system-ui, Avenir, Helvetica, Arial, sans-serif;
	line-height: 1.5;
	font-weight: 400;

	color-scheme: light dark;
	color: rgba(255, 255, 255, 0.87);
	background-color: #242424;

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

html {
	width: 100vw;
	height: 100svh;
}

body {
	margin: 0;
	min-width: 100vw;
	min-height: 100svh;

	width: 100%;
	height: 100%;

	padding: 20px;

	display: flex;
	flex-direction: column;
	gap: 10px;

	overflow: hidden;

	background-image: url("https://fukutotojido.s-ul.eu/9WppjJGO");

	background-position: center;
	background-size: cover;
}

@media screen and (max-aspect-ratio: 1 / 1) {
	body {
		padding: 0px;
	}

	#topBar {
		padding: 20px 10px 0 10px;
		flex-direction: column;
		height: auto;
	}

	#metadata, #diffsLabel {
		width: 100%;
	}

	#search {
		display: none;
	}
}

.loader {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	max-width: 6rem;
	margin-top: 3rem;
	margin-bottom: 3rem;
}
.loader:before,
.loader:after {
	content: "";
	position: absolute;
	border-radius: 50%;
	animation: pulsOut 1.8s ease-in-out infinite;
	filter: drop-shadow(0 0 1rem rgba(255, 255, 255, 0.75));
}
.loader:before {
	width: 100%;
	padding-bottom: 100%;
	box-shadow: inset 0 0 0 1rem #fff;
	animation-name: pulsIn;
}
.loader:after {
	width: calc(100% - 2rem);
	padding-bottom: calc(100% - 2rem);
	box-shadow: 0 0 0 0 #fff;
}

@keyframes pulsIn {
	0% {
		box-shadow: inset 0 0 0 1rem #fff;
		opacity: 1;
	}
	50%,
	100% {
		box-shadow: inset 0 0 0 0 #fff;
		opacity: 0;
	}
}

@keyframes pulsOut {
	0%,
	50% {
		box-shadow: 0 0 0 0 #fff;
		opacity: 0;
	}
	100% {
		box-shadow: 0 0 0 1rem #fff;
		opacity: 1;
	}
}

